tests/errors/parser-errors/atblock/at_block_unclosed_body_marker_start.smark
@_tag_@;
body
end_@
